--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -505,11 +505,15 @@ hr {
         font-size: 1rem;
     }
 
+    .hero {
+        min-height: 200px;
+    }
+   
     #quote-plate {
-        font-size: 100%;
-        width: 270px;
+        font-size: 90%;
+        width: 280px;
         height: 270px;
-        top: 110px;
+        top: 40px;
         left: 30px;
     }
 
