--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,6 +14,7 @@
 html {
     font-size: 62.5%;
     scroll-behavior: smooth;
+    scroll-padding-top: 70px;
 }
 
 body {
@@ -31,6 +32,10 @@ iframe,
 form {
     max-width: 100%;
     box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.4);
+}
+
+header {
+    max-width: 100%
 }
 
 audio {
@@ -88,6 +93,19 @@ hr {
 
 /* Logo & Navigation */
 
+.wrapper {
+    width: 100%;
+    margin: 0 auto;
+}
+
+header {
+    height: 70px;
+    width: 1280px;
+    z-index: 1;
+    position: fixed;
+    background-color: #fff;
+}
+
 #logo {
     font-size: 1.9rem;
     margin: 3px;
@@ -100,8 +118,8 @@ hr {
     opacity: 0.5;
 }
 
-.navigation-area .top-navigation {
-    font-size: 1.2rem;
+.top-navigation {
+    font-size: 1.3rem;
     text-transform: uppercase;
     letter-spacing: 1px;
     list-style-type: none;
@@ -113,8 +131,12 @@ hr {
     transition: 0.5s;
 }
 
-.navigation a:hover,
-.navigation a:focus {
+
+
+.top-navigation a:hover,
+.top-navigation nav a:focus
+
+ {
     background-color: rgba(26, 26, 26, .7);
     color: rgb(255, 255, 255);
 }
@@ -142,7 +164,7 @@ hr {
     letter-spacing: 4px;
     width: 800px;
     height: 250px;
-    top: 120px;
+    top: 170px;
     left: 80px;
     position: absolute;
     transition: 0.5s;
@@ -382,6 +404,15 @@ hr {
 /* max-width 950px */
 
 @media screen and (max-width: 950px) {
+    
+    html {
+        scroll-padding-top: 110px;
+    }
+
+    header {
+        height: 110px;
+     
+    }
 
     #logo {
         font-size: 90%;
@@ -391,14 +422,14 @@ hr {
         display: flex;
         justify-content: center;
     }
-    
-    .navigation {
+
+    nav {
         display: flex;
         clear: left;
         justify-content: center;
     }
 
-    .navigation li {
+    .top-navigation li {
         font-size: 1.6rem;
     }
 
@@ -406,7 +437,7 @@ hr {
         font-size: 150%;
         width: 400px;
         height: 250px;
-        top: 100px;
+        top: 145px;
         left: 50px;
     }
 
@@ -420,7 +451,7 @@ hr {
 
     #portfolio {
         min-height: 2350px;
-         }
+    }
 
     #copyright {
         font-size: 2rem;
@@ -431,11 +462,20 @@ hr {
 
 @media screen and (max-width: 640px) {
 
+    html {
+        scroll-padding-top: 135px;
+    }
+
+    header {
+        height: 135px;
+     
+    }
+
     #logo {
         font-size: 85%;
     }
 
-    .navigation-area .top-navigation {
+    .top-navigation {
         display: block;
         line-height: 20px;
         margin: 10px 0;
@@ -450,7 +490,7 @@ hr {
         font-size: 100%;
         width: 350px;
         height: 250px;
-        top: 130px;
+        top: 200px;
         left: 30px;
         transition: 0.5s
     }
@@ -480,7 +520,7 @@ hr {
         grid-template-rows: 1fr 1fr 1fr 1fr;
         grid-gap: 40px;
     }
-  
+
     #clients img {
         width: 100px;
     }
@@ -494,33 +534,33 @@ hr {
     }
 }
 
-/* max-width 390px */
+/* max-width 405 */
 
-@media screen and (max-width: 390px) {
+@media screen and (max-width: 405px) {
 
     #logo {
         font-size: 60%;
     }
-    
+
     .navigation li {
         font-size: 1rem;
     }
 
     .hero {
-        min-height: 200px;
+        min-height: 300px;
     }
-   
+
     #quote-plate {
         font-size: 90%;
         width: 280px;
         height: 270px;
-        top: 40px;
+        top: 150px;
         left: 30px;
     }
 
     #portfolio {
         min-height: 2450px;
-         }
+    }
 
     .contact-form {
         min-height: 510px;
