Change from webp to mp4 on videos due to incompatibility  problems on some devices change styling on top navigation on media query 640px

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -440,7 +440,7 @@ align-content: center;
         justify-content: center;
     }
 
-    .top-navigation li {
+    .top-navigation {
         font-size: 1.6rem;
     }
 
@@ -488,15 +488,12 @@ align-content: center;
 
     .top-navigation {
         display: block;
-        line-height: 20px;
+        line-height: 23px;
         margin: 10px 0;
         text-align: center;
+        font-size: 1.2rem;        
     }
-
-    .top-navigation li {
-        font-size: 1.2rem;
-    }
-
+    
     #quote-plate {
         font-size: 100%;
         width: 350px;
