--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -493,7 +493,7 @@ align-content: center;
         text-align: center;
         font-size: 1.2rem;        
     }
-    
+
     #quote-plate {
         font-size: 100%;
         width: 350px;
@@ -550,7 +550,7 @@ align-content: center;
         font-size: 60%;
     }
 
-    .navigation li {
+    .top-navigation {
         font-size: 1rem;
     }
 
@@ -567,7 +567,7 @@ align-content: center;
     }
 
     #portfolio {
-        min-height: 2450px;
+        min-height: 2630px;
     }
 
     .contact-form {
